--- a/main.html
+++ b/main.html
@@ -4,9 +4,42 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Signup Form Car</title>
 </head>
 
 <body>
+	<h1>Signup Form Car</h1>
+	<form method="post">
+		<fieldset>
+			<label for="name">Name:</label>
+			<input type="text" id="name" placeholder="Name" required><br><br>
+			<label for="email">Email:</label>
+			<input type="email" id="email" placeholder="Email" required><br><br>
+			<label for="gender">Gender:</label>
+			<label for="gender_m">Male</label>
+			<input type="radio" id="gender_m" name="gender" required>
+			<label for="gender_f">Female</label>
+			<input type="radio" id="gender_f" name="gender" required><br><br>
+			<label for="cars">Car Brands:</label>
+			<select name="pappu" id="cars" required>
+				<option value="" disabled selected hidden>--Please choose an option--</option>
+				<option value="BMW">BMW</option>
+				<option value="Audi">Audi</option>
+				<option value="Maruti">Maruti</option>
+			</select><br><br>
+			<label for="age">Age:</label>
+			<input type="number" id="age" required><br><br>
+			<label for="dob">DOB:</label>
+			<input type="date" id="dob" required><br><br>
+			<label for="tel">Phone Number:</label>
+			<input type="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
+			<label for="password">Password:</label>
+			<input type="password" id="password" placeholder="Password" required><br><br>
+			<label for="tos">I agree to the TOS</label>
+			<input type="checkbox" id="tos" required>
+			<button type="submit">Submit</button>
+		</fieldset>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
